visscript-hackground/tmp/tabs.output
Terminals which are not used

   FUNCTION


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: statement
    2                 | /* empty */

    3 statement: ';'
    4          | expr ';'

    5 expr: primary
    6     | '-' expr
    7     | '+' expr
    8     | expr '+' expr
    9     | expr '-' expr
   10     | expr '*' expr
   11     | expr '/' expr
   12     | expr '%' expr
   13     | expr '&' expr
   14     | expr '|' expr
   15     | expr '=' expr
   16     | '(' expr ')'

   17 fn_expr: /* empty */
   18        | expr
   19        | fn_expr ',' expr

   20 primary: CONSTANT
   21        | IDENTIFIER
   22        | IDENTIFIER '(' fn_expr ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 12
'&' (38) 13
'(' (40) 16 22
')' (41) 16 22
'*' (42) 10
'+' (43) 7 8
',' (44) 19
'-' (45) 6 9
'/' (47) 11
';' (59) 3 4
'=' (61) 15
'|' (124) 14
error (256)
IDENTIFIER (258) 21 22
CONSTANT (259) 20
FUNCTION (260)
UNARY (261)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
translation_unit (20)
    on left: 1 2, on right: 0
statement (21)
    on left: 3 4, on right: 1
expr (22)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16, on right: 4 6 7 8 9 10
    11 12 13 14 15 16 18 19
fn_expr (23)
    on left: 17 18 19, on right: 19 22
primary (24)
    on left: 20 21 22, on right: 5


state 0

    0 $accept: . translation_unit $end
    1 translation_unit: . statement
    2                 | .  [$end]
    3 statement: . ';'
    4          | . expr ';'
    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    ';'         shift, and go to state 5
    '('         shift, and go to state 6

    $default  reduce using rule 2 (translation_unit)

    translation_unit  go to state 7
    statement         go to state 8
    expr              go to state 9
    primary           go to state 10


state 1

   21 primary: IDENTIFIER .  ['=', '|', '&', '+', '-', '*', '/', '%', ';', ')', ',']
   22        | IDENTIFIER . '(' fn_expr ')'

    '('  shift, and go to state 11

    $default  reduce using rule 21 (primary)


state 2

   20 primary: CONSTANT .

    $default  reduce using rule 20 (primary)


state 3

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    7     | '+' . expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 12
    primary  go to state 10


state 4

    5 expr: . primary
    6     | . '-' expr
    6     | '-' . expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 13
    primary  go to state 10


state 5

    3 statement: ';' .

    $default  reduce using rule 3 (statement)


state 6

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   16     | '(' . expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 14
    primary  go to state 10


state 7

    0 $accept: translation_unit . $end

    $end  shift, and go to state 15


state 8

    1 translation_unit: statement .

    $default  reduce using rule 1 (translation_unit)


state 9

    4 statement: expr . ';'
    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr

    '='  shift, and go to state 16
    '|'  shift, and go to state 17
    '&'  shift, and go to state 18
    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    '%'  shift, and go to state 23
    ';'  shift, and go to state 24


state 10

    5 expr: primary .

    $default  reduce using rule 5 (expr)


state 11

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   17 fn_expr: .  [')', ',']
   18        | . expr
   19        | . fn_expr ',' expr
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'
   22        | IDENTIFIER '(' . fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    $default  reduce using rule 17 (fn_expr)

    expr     go to state 25
    fn_expr  go to state 26
    primary  go to state 10


state 12

    7 expr: '+' expr .  ['=', '|', '&', '+', '-', '*', '/', '%', ';', ')', ',']
    8     | expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr

    $default  reduce using rule 7 (expr)

    Conflict between rule 7 and token '=' resolved as reduce ('=' < UNARY).
    Conflict between rule 7 and token '|' resolved as reduce ('|' < UNARY).
    Conflict between rule 7 and token '&' resolved as reduce ('&' < UNARY).
    Conflict between rule 7 and token '+' resolved as reduce ('+' < UNARY).
    Conflict between rule 7 and token '-' resolved as reduce ('-' < UNARY).
    Conflict between rule 7 and token '*' resolved as reduce ('*' < UNARY).
    Conflict between rule 7 and token '/' resolved as reduce ('/' < UNARY).
    Conflict between rule 7 and token '%' resolved as reduce ('%' < UNARY).


state 13

    6 expr: '-' expr .  ['=', '|', '&', '+', '-', '*', '/', '%', ';', ')', ',']
    8     | expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr

    $default  reduce using rule 6 (expr)

    Conflict between rule 6 and token '=' resolved as reduce ('=' < UNARY).
    Conflict between rule 6 and token '|' resolved as reduce ('|' < UNARY).
    Conflict between rule 6 and token '&' resolved as reduce ('&' < UNARY).
    Conflict between rule 6 and token '+' resolved as reduce ('+' < UNARY).
    Conflict between rule 6 and token '-' resolved as reduce ('-' < UNARY).
    Conflict between rule 6 and token '*' resolved as reduce ('*' < UNARY).
    Conflict between rule 6 and token '/' resolved as reduce ('/' < UNARY).
    Conflict between rule 6 and token '%' resolved as reduce ('%' < UNARY).


state 14

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr
   16     | '(' expr . ')'

    '='  shift, and go to state 16
    '|'  shift, and go to state 17
    '&'  shift, and go to state 18
    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    '%'  shift, and go to state 23
    ')'  shift, and go to state 27


state 15

    0 $accept: translation_unit $end .

    $default  accept


state 16

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   15     | expr '=' . expr
   16     | . '(' expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 28
    primary  go to state 10


state 17

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   14     | expr '|' . expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 29
    primary  go to state 10


state 18

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   13     | expr '&' . expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 30
    primary  go to state 10


state 19

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    8     | expr '+' . expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 31
    primary  go to state 10


state 20

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
    9     | expr '-' . expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 32
    primary  go to state 10


state 21

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   10     | expr '*' . expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 33
    primary  go to state 10


state 22

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   11     | expr '/' . expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 34
    primary  go to state 10


state 23

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   12     | expr '%' . expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 35
    primary  go to state 10


state 24

    4 statement: expr ';' .

    $default  reduce using rule 4 (statement)


state 25

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr
   18 fn_expr: expr .  [')', ',']

    '='  shift, and go to state 16
    '|'  shift, and go to state 17
    '&'  shift, and go to state 18
    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    '%'  shift, and go to state 23

    $default  reduce using rule 18 (fn_expr)


state 26

   19 fn_expr: fn_expr . ',' expr
   22 primary: IDENTIFIER '(' fn_expr . ')'

    ')'  shift, and go to state 36
    ','  shift, and go to state 37


state 27

   16 expr: '(' expr ')' .

    $default  reduce using rule 16 (expr)


state 28

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr  [';', ')', ',']
   15     | expr '=' expr .  [';', ')', ',']

    '='  shift, and go to state 16
    '|'  shift, and go to state 17
    '&'  shift, and go to state 18
    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    '%'  shift, and go to state 23

    $default  reduce using rule 15 (expr)

    Conflict between rule 15 and token '=' resolved as shift (%right '=').
    Conflict between rule 15 and token '|' resolved as shift ('=' < '|').
    Conflict between rule 15 and token '&' resolved as shift ('=' < '&').
    Conflict between rule 15 and token '+' resolved as shift ('=' < '+').
    Conflict between rule 15 and token '-' resolved as shift ('=' < '-').
    Conflict between rule 15 and token '*' resolved as shift ('=' < '*').
    Conflict between rule 15 and token '/' resolved as shift ('=' < '/').
    Conflict between rule 15 and token '%' resolved as shift ('=' < '%').


state 29

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr  ['=', '|', ';', ')', ',']
   14     | expr '|' expr .  ['=', '|', ';', ')', ',']
   15     | expr . '=' expr

    '&'  shift, and go to state 18
    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    '%'  shift, and go to state 23

    $default  reduce using rule 14 (expr)

    Conflict between rule 14 and token '=' resolved as reduce ('=' < '|').
    Conflict between rule 14 and token '|' resolved as reduce (%left '|').
    Conflict between rule 14 and token '&' resolved as shift ('|' < '&').
    Conflict between rule 14 and token '+' resolved as shift ('|' < '+').
    Conflict between rule 14 and token '-' resolved as shift ('|' < '-').
    Conflict between rule 14 and token '*' resolved as shift ('|' < '*').
    Conflict between rule 14 and token '/' resolved as shift ('|' < '/').
    Conflict between rule 14 and token '%' resolved as shift ('|' < '%').


state 30

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr  ['=', '|', '&', ';', ')', ',']
   13     | expr '&' expr .  ['=', '|', '&', ';', ')', ',']
   14     | expr . '|' expr
   15     | expr . '=' expr

    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    '%'  shift, and go to state 23

    $default  reduce using rule 13 (expr)

    Conflict between rule 13 and token '=' resolved as reduce ('=' < '&').
    Conflict between rule 13 and token '|' resolved as reduce ('|' < '&').
    Conflict between rule 13 and token '&' resolved as reduce (%left '&').
    Conflict between rule 13 and token '+' resolved as shift ('&' < '+').
    Conflict between rule 13 and token '-' resolved as shift ('&' < '-').
    Conflict between rule 13 and token '*' resolved as shift ('&' < '*').
    Conflict between rule 13 and token '/' resolved as shift ('&' < '/').
    Conflict between rule 13 and token '%' resolved as shift ('&' < '%').


state 31

    8 expr: expr . '+' expr  ['=', '|', '&', '+', '-', ';', ')', ',']
    8     | expr '+' expr .  ['=', '|', '&', '+', '-', ';', ')', ',']
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr

    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    '%'  shift, and go to state 23

    $default  reduce using rule 8 (expr)

    Conflict between rule 8 and token '=' resolved as reduce ('=' < '+').
    Conflict between rule 8 and token '|' resolved as reduce ('|' < '+').
    Conflict between rule 8 and token '&' resolved as reduce ('&' < '+').
    Conflict between rule 8 and token '+' resolved as reduce (%left '+').
    Conflict between rule 8 and token '-' resolved as reduce (%left '-').
    Conflict between rule 8 and token '*' resolved as shift ('+' < '*').
    Conflict between rule 8 and token '/' resolved as shift ('+' < '/').
    Conflict between rule 8 and token '%' resolved as shift ('+' < '%').


state 32

    8 expr: expr . '+' expr
    9     | expr . '-' expr  ['=', '|', '&', '+', '-', ';', ')', ',']
    9     | expr '-' expr .  ['=', '|', '&', '+', '-', ';', ')', ',']
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr

    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    '%'  shift, and go to state 23

    $default  reduce using rule 9 (expr)

    Conflict between rule 9 and token '=' resolved as reduce ('=' < '-').
    Conflict between rule 9 and token '|' resolved as reduce ('|' < '-').
    Conflict between rule 9 and token '&' resolved as reduce ('&' < '-').
    Conflict between rule 9 and token '+' resolved as reduce (%left '+').
    Conflict between rule 9 and token '-' resolved as reduce (%left '-').
    Conflict between rule 9 and token '*' resolved as shift ('-' < '*').
    Conflict between rule 9 and token '/' resolved as shift ('-' < '/').
    Conflict between rule 9 and token '%' resolved as shift ('-' < '%').


state 33

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr  ['=', '|', '&', '+', '-', '*', '/', '%', ';', ')', ',']
   10     | expr '*' expr .  ['=', '|', '&', '+', '-', '*', '/', '%', ';', ')', ',']
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr

    $default  reduce using rule 10 (expr)

    Conflict between rule 10 and token '=' resolved as reduce ('=' < '*').
    Conflict between rule 10 and token '|' resolved as reduce ('|' < '*').
    Conflict between rule 10 and token '&' resolved as reduce ('&' < '*').
    Conflict between rule 10 and token '+' resolved as reduce ('+' < '*').
    Conflict between rule 10 and token '-' resolved as reduce ('-' < '*').
    Conflict between rule 10 and token '*' resolved as reduce (%left '*').
    Conflict between rule 10 and token '/' resolved as reduce (%left '/').
    Conflict between rule 10 and token '%' resolved as reduce (%left '%').


state 34

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr  ['=', '|', '&', '+', '-', '*', '/', '%', ';', ')', ',']
   11     | expr '/' expr .  ['=', '|', '&', '+', '-', '*', '/', '%', ';', ')', ',']
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr

    $default  reduce using rule 11 (expr)

    Conflict between rule 11 and token '=' resolved as reduce ('=' < '/').
    Conflict between rule 11 and token '|' resolved as reduce ('|' < '/').
    Conflict between rule 11 and token '&' resolved as reduce ('&' < '/').
    Conflict between rule 11 and token '+' resolved as reduce ('+' < '/').
    Conflict between rule 11 and token '-' resolved as reduce ('-' < '/').
    Conflict between rule 11 and token '*' resolved as reduce (%left '*').
    Conflict between rule 11 and token '/' resolved as reduce (%left '/').
    Conflict between rule 11 and token '%' resolved as reduce (%left '%').


state 35

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr  ['=', '|', '&', '+', '-', '*', '/', '%', ';', ')', ',']
   12     | expr '%' expr .  ['=', '|', '&', '+', '-', '*', '/', '%', ';', ')', ',']
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr

    $default  reduce using rule 12 (expr)

    Conflict between rule 12 and token '=' resolved as reduce ('=' < '%').
    Conflict between rule 12 and token '|' resolved as reduce ('|' < '%').
    Conflict between rule 12 and token '&' resolved as reduce ('&' < '%').
    Conflict between rule 12 and token '+' resolved as reduce ('+' < '%').
    Conflict between rule 12 and token '-' resolved as reduce ('-' < '%').
    Conflict between rule 12 and token '*' resolved as reduce (%left '*').
    Conflict between rule 12 and token '/' resolved as reduce (%left '/').
    Conflict between rule 12 and token '%' resolved as reduce (%left '%').


state 36

   22 primary: IDENTIFIER '(' fn_expr ')' .

    $default  reduce using rule 22 (primary)


state 37

    5 expr: . primary
    6     | . '-' expr
    7     | . '+' expr
    8     | . expr '+' expr
    9     | . expr '-' expr
   10     | . expr '*' expr
   11     | . expr '/' expr
   12     | . expr '%' expr
   13     | . expr '&' expr
   14     | . expr '|' expr
   15     | . expr '=' expr
   16     | . '(' expr ')'
   19 fn_expr: fn_expr ',' . expr
   20 primary: . CONSTANT
   21        | . IDENTIFIER
   22        | . IDENTIFIER '(' fn_expr ')'

    IDENTIFIER  shift, and go to state 1
    CONSTANT    shift, and go to state 2
    '+'         shift, and go to state 3
    '-'         shift, and go to state 4
    '('         shift, and go to state 6

    expr     go to state 38
    primary  go to state 10


state 38

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . '%' expr
   13     | expr . '&' expr
   14     | expr . '|' expr
   15     | expr . '=' expr
   19 fn_expr: fn_expr ',' expr .  [')', ',']

    '='  shift, and go to state 16
    '|'  shift, and go to state 17
    '&'  shift, and go to state 18
    '+'  shift, and go to state 19
    '-'  shift, and go to state 20
    '*'  shift, and go to state 21
    '/'  shift, and go to state 22
    '%'  shift, and go to state 23

    $default  reduce using rule 19 (fn_expr)
